--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume",
   "version": "0.1.0",
-  "homepage": "https://segerpeter07.github.io/",
+  "homepage": "https://peterhenryseger.com/",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
